--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.11.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.4",
     "tailwind-scrollbar-hide": "^1.1.7",
