--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.10.5",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
+    "@splidejs/react-splide": "^0.7.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
