--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-player": "^2.11.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.4",
