--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.4",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
