--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react-player": "^2.12.0",
     "typewriter-effect": "^2.19.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.21.5"
   }
 }
